--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   <h2 style="text-align: center;">Pieron-jellegű figyelemteszt</h2>
 
   <p class="task-description">
-    Feladat leírása: a <strong>"Teszt indítása"</strong> után felugró mezőben add meg a mintának megfelelően a neved. Az "OK" gombra kattintás után megjelenő táblázatban
+    Feladat leírása: a <strong>"Teszt indítása"</strong> után felugró ablakban add meg a mintának megfelelően a neved. Az "OK" gombra kattintás után megjelenő táblázatban
     <strong>keresd meg azokat az alakzatokat, amelyek megegyeznek a mintában szereplőkkel</strong>,
     és az ENTER/SPACE billentyű lenyomásával jelöld ki őket.
     <strong>FONTOS</strong>, ha kijelöltél egy alakzatot, akkor utána automatikus továbbléptetés történik,
